--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
     "core-js": "^3.6.5",
+    "moment": "^2.29.1",
     "sweetalert2": "^10.3.5",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.0-beta.11",
